--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -1,130 +1,135 @@
 <div class="meu-modal">
 
   <div class="header">
-    <div class="title"><span class="glyphicon glyphicon-shopping-cart"></span> Buscar Orçamento <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
+    <div class="title">
+      <span class="glyphicon glyphicon-shopping-cart"></span>
+      <span class="hidden-xs">Buscar Orçamento</span>
+      <span class="visible-xs-inline-block">Orçamentos</span>
+      <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span>
+    </div>
   </div>
 
   <div class="body condensar-rows">
 
     <div class="container">
 
-      <div class="filtros" ng-if="false">
+      <!--<div class="filtros" ng-if="false">-->
 
-        <div class="row well">
-          <div class="col-md-3" ng-show="filtros.contains('pedido')">
-            <div class="filtro-sm pedido">
-              <table>
-                <tr>
-                  <td><input type="text" class="" ng-model="cdPedido" placeholder="código"></td>
-                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('pedido')"></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
+        <!--<div class="row well">-->
+          <!--<div class="col-md-3" ng-show="filtros.contains('pedido')">-->
+            <!--<div class="filtro-sm pedido">-->
+              <!--<table>-->
+                <!--<tr>-->
+                  <!--<td><input type="text" class="" ng-model="cdPedido" placeholder="código"></td>-->
+                  <!--<td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('pedido')"></span></td>-->
+                <!--</tr>-->
+              <!--</table>-->
+            <!--</div>-->
+          <!--</div>-->
 
-          <div class="col-md-9" ng-show="filtros.contains('vendedor')">
-            <div class="filtro-lg vendedor">
-              <table>
-                <tr>
-                  <td><input type="text" class="" ng-model="cdVendedor" placeholder="código"></td>
-                  <td><input type="text" class="" ng-model="nmVendedor" placeholder="nome do vendedor"></td>
-                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('vendedor')"></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
+          <!--<div class="col-md-9" ng-show="filtros.contains('vendedor')">-->
+            <!--<div class="filtro-lg vendedor">-->
+              <!--<table>-->
+                <!--<tr>-->
+                  <!--<td><input type="text" class="" ng-model="cdVendedor" placeholder="código"></td>-->
+                  <!--<td><input type="text" class="" ng-model="nmVendedor" placeholder="nome do vendedor"></td>-->
+                  <!--<td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('vendedor')"></span></td>-->
+                <!--</tr>-->
+              <!--</table>-->
+            <!--</div>-->
+          <!--</div>-->
 
-          <div class="col-md-9" ng-show="filtros.contains('cliente')">
-            <div class="filtro-lg cliente">
-              <table>
-                <tr>
-                  <td><input type="text" class="" ng-model="cdCliente" placeholder="código"></td>
-                  <td><input type="text" class="" ng-model="nmCliente" placeholder="nome do cliente"></td>
-                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('cliente')"></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
+          <!--<div class="col-md-9" ng-show="filtros.contains('cliente')">-->
+            <!--<div class="filtro-lg cliente">-->
+              <!--<table>-->
+                <!--<tr>-->
+                  <!--<td><input type="text" class="" ng-model="cdCliente" placeholder="código"></td>-->
+                  <!--<td><input type="text" class="" ng-model="nmCliente" placeholder="nome do cliente"></td>-->
+                  <!--<td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('cliente')"></span></td>-->
+                <!--</tr>-->
+              <!--</table>-->
+            <!--</div>-->
+          <!--</div>-->
 
-          <div class="col-md-3" ng-show="filtros.contains('data-inicial')">
-            <div class="filtro-sm data-inicial">
-              <table>
-                <tr>
-                  <td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>
-                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
+          <!--<div class="col-md-3" ng-show="filtros.contains('data-inicial')">-->
+            <!--<div class="filtro-sm data-inicial">-->
+              <!--<table>-->
+                <!--<tr>-->
+                  <!--<td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>-->
+                  <!--<td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>-->
+                <!--</tr>-->
+              <!--</table>-->
+            <!--</div>-->
+          <!--</div>-->
 
-          <div class="col-md-3" ng-show="filtros.contains('data-final')">
-            <div class="filtro-sm data-final">
-              <table>
-                <tr>
-                  <td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>
-                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
+          <!--<div class="col-md-3" ng-show="filtros.contains('data-final')">-->
+            <!--<div class="filtro-sm data-final">-->
+              <!--<table>-->
+                <!--<tr>-->
+                  <!--<td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>-->
+                  <!--<td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>-->
+                <!--</tr>-->
+              <!--</table>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
 
-        <div class="row">
-          <div class="col-md-9">
-            <a href="" class="badge pedido" ng-click="addFiltro('pedido')">Pedido (código)</a>
-            <a href="" class="badge vendedor" ng-click="addFiltro('vendedor')">Vendedor (código ou nome)</a>
-            <a href="" class="badge cliente" ng-click="addFiltro('cliente')">Cliente (código ou nome)</a>
-            <a href="" class="badge data-inicial" ng-click="addFiltro('data-inicial')">Data Inicial</a>
-            <a href="" class="badge data-final" ng-click="addFiltro('data-final')">Data Final</a>
-          </div>
-          <div class="col-md-3">
-            <button class="btn btn-default botao-esticado" ng-click="buscar()"><span class="glyphicon glyphicon-search"></span> Buscar</button>
-          </div>
-        </div>
+        <!--<div class="row">-->
+          <!--<div class="col-md-9">-->
+            <!--<a href="" class="badge pedido" ng-click="addFiltro('pedido')">Pedido (código)</a>-->
+            <!--<a href="" class="badge vendedor" ng-click="addFiltro('vendedor')">Vendedor (código ou nome)</a>-->
+            <!--<a href="" class="badge cliente" ng-click="addFiltro('cliente')">Cliente (código ou nome)</a>-->
+            <!--<a href="" class="badge data-inicial" ng-click="addFiltro('data-inicial')">Data Inicial</a>-->
+            <!--<a href="" class="badge data-final" ng-click="addFiltro('data-final')">Data Final</a>-->
+          <!--</div>-->
+          <!--<div class="col-md-3">-->
+            <!--<button class="btn btn-default botao-esticado" ng-click="buscar()"><span class="glyphicon glyphicon-search"></span> Buscar</button>-->
+          <!--</div>-->
+        <!--</div>-->
 
-      </div>
+      <!--</div>-->
 
-      <div class="row" ng-repeat="filtro in filtros track by $index" ng-show="false">
-        <div class="col-md-3">
-          <h4>Filtro</h4>
-          <select class="form-control" ng-init="opt = filtro" ng-model="opt" ng-change="filtros[$index] = opt">
-            <option value="{{opcao.valor}}" ng-selected="opt===opcao.valor" ng-disabled="filtros.contains(opcao.valor)" ng-repeat="opcao in opcoes">{{opcao.nome}} {{opcao.desc}}</option>
-          </select>
-        </div>
+      <!--<div class="row" ng-repeat="filtro in filtros track by $index" ng-show="false">-->
+        <!--<div class="col-md-3">-->
+          <!--<h4>Filtro</h4>-->
+          <!--<select class="form-control" ng-init="opt = filtro" ng-model="opt" ng-change="filtros[$index] = opt">-->
+            <!--<option value="{{opcao.valor}}" ng-selected="opt===opcao.valor" ng-disabled="filtros.contains(opcao.valor)" ng-repeat="opcao in opcoes">{{opcao.nome}} {{opcao.desc}}</option>-->
+          <!--</select>-->
+        <!--</div>-->
 
-        <div class="col-md-3" ng-show="opt == 'pedido'">
-          <h4>Código</h4>
-          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" keys-shortcuts enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
-        </div>
+        <!--<div class="col-md-3" ng-show="opt == 'pedido'">-->
+          <!--<h4>Código</h4>-->
+          <!--<input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" keys-shortcuts enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">-->
+        <!--</div>-->
 
-        <div class="col-md-3" ng-show="opt == 'vendedor'">
-          <h4>Código</h4>
-          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" keys-shortcuts enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
-        </div>
-        <div class="col-md-6" ng-show="opt == 'vendedor'">
-          <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" keys-shortcuts enter="buscarPorNomeVendedor(nmVendedor)">
-        </div>
+        <!--<div class="col-md-3" ng-show="opt == 'vendedor'">-->
+          <!--<h4>Código</h4>-->
+          <!--<input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" keys-shortcuts enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">-->
+        <!--</div>-->
+        <!--<div class="col-md-6" ng-show="opt == 'vendedor'">-->
+          <!--<h4>Nome</h4>-->
+          <!--<input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" keys-shortcuts enter="buscarPorNomeVendedor(nmVendedor)">-->
+        <!--</div>-->
 
-        <div class="col-md-3" ng-show="opt == 'cliente'">
-          <h4>Código</h4>
-          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" keys-shortcuts enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
-        </div>
-        <div class="col-md-6" ng-show="opt == 'cliente'">
-          <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" keys-shortcuts enter="buscarPorNomeCliente(nmCliente)">
-        </div>
+        <!--<div class="col-md-3" ng-show="opt == 'cliente'">-->
+          <!--<h4>Código</h4>-->
+          <!--<input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" keys-shortcuts enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">-->
+        <!--</div>-->
+        <!--<div class="col-md-6" ng-show="opt == 'cliente'">-->
+          <!--<h4>Nome</h4>-->
+          <!--<input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" keys-shortcuts enter="buscarPorNomeCliente(nmCliente)">-->
+        <!--</div>-->
 
-        <div class="col-md-3" ng-show="opt == 'data'">
-          <h4>Inicial</h4>
-          <input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
-        </div>
-        <div class="col-md-3" ng-show="opt == 'data'">
-          <h4>Final</h4>
-          <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
-        </div>
+        <!--<div class="col-md-3" ng-show="opt == 'data'">-->
+          <!--<h4>Inicial</h4>-->
+          <!--<input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">-->
+        <!--</div>-->
+        <!--<div class="col-md-3" ng-show="opt == 'data'">-->
+          <!--<h4>Final</h4>-->
+          <!--<input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">-->
+        <!--</div>-->
 
-      </div>
+      <!--</div>-->
 
       <div class="row">
         <div class="col-md-2">
@@ -136,7 +141,7 @@
               </span>
             </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-6 col-md-2">
           <h4>Data Inicial</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
@@ -145,7 +150,7 @@
             </span>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-6 col-md-2">
           <h4>Data Final</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
@@ -154,7 +159,7 @@
             </span>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-xs-12 col-md-6">
           <h4>Vendedor</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" keys-shortcuts enter="buscar()">
@@ -164,7 +169,7 @@
             </span>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-xs-12 col-md-6">
           <h4>Cliente</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar um cliente" readonly="true">
@@ -174,15 +179,15 @@
             </span>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="hidden-xs col-md-2">
           <h4>Status</h4>
           <input type="text" class="form-control" readonly="true">
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-6 col-md-2">
           <h4>&nbsp;</h4>
           <button class="btn btn-default botao-esticado" ng-click="limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-6 col-md-2">
           <h4>&nbsp;</h4>
           <button class="btn btn-default botao-esticado" ng-click="buscar()"><span class="glyphicon glyphicon-search"></span> Buscar</button>
         </div>
@@ -209,7 +214,7 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <table class="tabela tabela-bordered tabela-selecionavel" style="width: 100%">
+          <table class="tabela tabela-bordered tabela-selecionavel tabela-esticada">
             <thead>
             <tr>
               <th>Cód</th>
@@ -220,20 +225,20 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-if="!pedidos.length" ng-repeat="v in vazio">
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr ng-repeat="p in pedidos" ng-click="selecionarPedido(p)">
-              <td>{{p.codigo}}</td>
-              <td>{{p.vendedor.nome}}</td>
-              <td>{{p.cliente.nome}}</td>
-              <td>{{p.dataPedido | date: 'dd/MM/yyyy'}}</td>
-              <td>{{p.valorComDesconto | currency: 'R$ '}}</td>
-            </tr>
+              <tr ng-repeat="p in pedidos" ng-click="selecionarPedido(p)">
+                <td data-label="Código">{{p.codigo}}</td>
+                <td data-label="Vendedor">{{p.vendedor.nome}}</td>
+                <td data-label="Cliente">{{p.cliente.nome}}</td>
+                <td data-label="Data">{{p.dataPedido | date: 'dd/MM/yyyy'}}</td>
+                <td data-label="Total">{{p.valorComDesconto | currency: 'R$ '}}</td>
+              </tr>
+              <tr class="hidden-xs" ng-if="!pedidos.length" ng-repeat="v in vazio">
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+              </tr>
             </tbody>
           </table>
         </div>
