--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -30,19 +30,19 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <table class="tabela tabela-bordered tabela-selecionavel" style="width: 100%" id="tabela-buscar-pessoas">
+          <table class="tabela tabela-bordered tabela-esticada tabela-selecionavel">
             <thead>
-            <tr>
-              <th>Cód</th>
-              <th>Nome</th>
-            </tr>
+              <tr>
+                <th>Cód</th>
+                <th>Nome</th>
+              </tr>
             </thead>
             <tbody>
               <tr ng-repeat="p in pessoas" ng-click="selecionarPessoa(p)">
-                <td>{{p.codigo}}</td>
-                <td>{{p.nome}}</td>
+                <td data-label="Código">{{p.codigo}}</td>
+                <td data-label="Nome">{{p.nome}}</td>
               </tr>
-              <tr ng-if="pessoas.length < pagination.max" ng-repeat="n in getNumber(pessoas.length < pagination.max ? pagination.max - pessoas.length : 0) track by $index">
+              <tr class="hidden-xs" ng-if="pessoas.length < pagination.max" ng-repeat="n in getNumber(pessoas.length < pagination.max ? pagination.max - pessoas.length : 0) track by $index">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
               </tr>
