--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -23,6 +23,44 @@
   font-size: 1.2em;
   @extend .sombra;
 
+  .navbar-header {
+    .navbar-toggle {
+      background-color: $cor-principal;
+      border-color: transparent;
+
+      &:hover, &:focus {
+        background-color: $cor-highlight;
+      }
+
+      .icon-bar {
+        background-color: white;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    position: fixed;
+    width: 100%;
+
+    .navbar-collapse {
+      border: none;
+      background-color: $cor-highlight;
+
+      ul {
+        &:first-child {
+          li {
+            //border-top: 1px solid red;
+            margin-top: 4px;
+
+            &:last-child {
+              //border-bottom: 1px solid red;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .navbar-nav {
     //float: none;
     //text-align: center;
@@ -68,7 +106,7 @@
   .navbar-fixed-bottom {
     color: white;
     height: 70px;
-    padding: 10px 0px;
+    padding: 10px 0;
 
     div {
       width: 100%;
@@ -85,11 +123,11 @@
     padding-bottom: 0;
 
     .perfil {
-      font-size: 1.2em;
+      font-size: 1.1em;
       border: 2px solid $cor-principal-clara;
       border-radius: 4px;
       color: $cor-principal-clara;
-      padding: 6px;
+      padding: 4px;
     }
   }
 
@@ -122,6 +160,7 @@
   }
 
   .navbar-footer-content { padding:15px 15px 15px 15px; }
+
   .dropdown-menu {
     padding: 0;
     overflow: hidden;
