--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -10,6 +10,9 @@ body {
   body > div[name="view-principal"] {
     display: table;
     width: 100%; }
+    @media (max-width: 767px) {
+      body > div[name="view-principal"] {
+        padding-top: 50px; } }
 
 body.padding-top {
   padding-top: 160px; }
@@ -133,6 +136,12 @@ body.padding-bottom {
   color: #6481bb; }
   .btn.btn-default:hover, .btn.btn-default:focus {
     color: #6481bb; }
+
+.btn.btn-primary {
+  background-color: #6481bb;
+  border-color: #3b5998; }
+  .btn.btn-primary:hover, .btn.btn-primary:focus {
+    background-color: #3b5998; }
 
 input.form-control {
   padding-left: 6px;
@@ -297,7 +306,7 @@ span:focus, a:focus {
   visibility: hidden;
   clear: both; }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .tabela, #tabela-orcamento {
     background-color: transparent; }
     .tabela thead, #tabela-orcamento thead {
@@ -354,6 +363,8 @@ span:focus, a:focus {
   padding: 15px; }
   .meu-modal .body .container {
     width: 100%; }
+.meu-modal .body.xs {
+  height: 120px; }
 .meu-modal .body.sm {
   height: 330px; }
 .meu-modal .body.md {
@@ -494,6 +505,22 @@ span:focus, a:focus {
   -moz-border-radius: 0px;
   border-radius: 0px;
   font-size: 1.2em; }
+  .navbar-default .navbar-header .navbar-toggle {
+    background-color: #3b5998;
+    border-color: transparent; }
+    .navbar-default .navbar-header .navbar-toggle:hover, .navbar-default .navbar-header .navbar-toggle:focus {
+      background-color: #29487d; }
+    .navbar-default .navbar-header .navbar-toggle .icon-bar {
+      background-color: white; }
+  @media (max-width: 767px) {
+    .navbar-default {
+      position: fixed;
+      width: 100%; }
+      .navbar-default .navbar-collapse {
+        border: none;
+        background-color: #29487d; }
+        .navbar-default .navbar-collapse ul:first-child li {
+          margin-top: 4px; } }
   .navbar-default .navbar-nav > li a {
     color: white; }
     .navbar-default .navbar-nav > li a:hover, .navbar-default .navbar-nav > li a:focus {
@@ -510,7 +537,7 @@ span:focus, a:focus {
   .navbar-default .navbar-fixed-bottom {
     color: white;
     height: 70px;
-    padding: 10px 0px; }
+    padding: 10px 0; }
     .navbar-default .navbar-fixed-bottom div {
       width: 100%;
       height: 100%;
@@ -521,11 +548,11 @@ span:focus, a:focus {
     padding: 10px;
     padding-bottom: 0; }
     .navbar-default .navbar-login .perfil {
-      font-size: 1.2em;
+      font-size: 1.1em;
       border: 2px solid #6481bb;
       border-radius: 4px;
       color: #6481bb;
-      padding: 6px; }
+      padding: 4px; }
   @media (max-width: 767px) {
     .navbar-default .navbar-login {
       width: 100%; } }
