--- a/app/partials/dashboard/perfis.html
+++ b/app/partials/dashboard/perfis.html
@@ -1,7 +1,7 @@
 <!--PERFIS-->
 <div class="col-md-12">
   <div class="header">
-    <h3>Perfis</h3>
+    <h3>Perfis de usuário</h3>
   </div>
 </div>
 <div class="col-xs-6 col-sm-3 col-md-3">
