--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -96,7 +96,7 @@
         </div>
         <div class="footer">
           <button type="button" class="btn btn-default" ng-click="header.cancelarModalSenha()"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
-          <button type="button" class="btn btn-default" ng-click="header.trocarSenha()"><span class="glyphicon glyphicon-ok"></span> Salvar</button>
+          <button type="button" class="btn btn-default" ng-click="header.salvarModalSenha()"><span class="glyphicon glyphicon-ok"></span> Salvar</button>
         </div>
       </div>
     </div>
