--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -112,6 +112,31 @@ body.padding-bottom {
   @extend .sombra;
   background-color: white;
   padding: 10px;
+
+  .head {
+    color: white;
+    background-color: $cor-principal-clara;
+    cursor: pointer;
+
+    h3 {
+      margin: 10px;
+      color: white;
+    }
+
+    a {
+      color: white;
+    }
+
+    .limpar {
+      font-size: .8em;
+      font-weight: 400;
+      vertical-align: middle;
+    }
+
+    .glyphicon-menu-up, .glyphicon-menu-down {
+      float: right;
+    }
+  }
 }
 
 .alerta {
@@ -174,7 +199,17 @@ body.padding-bottom {
 }
 
 .remove-padding {
-  padding: 0;
+  padding: 0 !important;
+}
+
+.remove-padding-vertical {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.remove-padding-horizontal {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .condensar-rows {
@@ -186,6 +221,12 @@ body.padding-bottom {
       padding-left: 0 !important;
       padding-right: 0 !important;
     }
+  }
+}
+
+.apontavel {
+  &:hover {
+    cursor: pointer;
   }
 }
 
@@ -298,6 +339,11 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   border: 1px solid $cor-principal-clara;
   box-shadow: 0 0 6px $cor-principal-clara;
   position: relative;
+}
+
+textarea {
+  resize: none;
+  overflow-y: scroll;
 }
 
 input[type='checkbox']:focus {
@@ -814,6 +860,7 @@ span:focus, a:focus {
 @import 'signup';
 @import 'home';
 @import 'orcamento';
+@import 'follow_up';
 @import 'configuracoes';
 @import 'loading';
 
