--- a/app/partials/dashboard/follow-up.html
+++ b/app/partials/dashboard/follow-up.html
@@ -129,7 +129,7 @@
 </div>
 
 <!--MODAL TIPO-->
-<div class="modal meu-modal fade" id="modalTipo" tabindex="-1" role="dialog" aria-labelledby="modalSenha">
+<div class="modal meu-modal fade" id="modalTipo" tabindex="-1" role="dialog" aria-labelledby="modalTipo">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="header">
@@ -156,7 +156,7 @@
 <!--FIM MODAL-->
 
 <!--MODAL CR-->
-<div class="modal meu-modal fade" id="modalCR" tabindex="-1" role="dialog" aria-labelledby="modalSenha">
+<div class="modal meu-modal fade" id="modalCR" tabindex="-1" role="dialog" aria-labelledby="modalCR">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="header">
