--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -92,12 +92,11 @@ $print-font-size: 11px;
 
   h4 {
     margin-top: 0;
-    margin-bottom: 0;
-    color: $cor-principal-clara;
+    //margin-bottom: 0;
   }
 
   h5 {
-    color: $cor-principal-clara;
+    //color: $cor-principal-clara;
     margin: 0;
     margin-top: 5px;
   }
