--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -8,27 +8,69 @@
     </div>
 
     <div class="col-md-12">
-      <!--<div class="col-md-12" ng-init="show_filtros = false">-->
-        <h3 class="apontavel" ng-click="show_filtros = !show_filtros"><span class="glyphicon" ng-class="{true: 'glyphicon-collapse-up', false: 'glyphicon-collapse-down'}[show_filtros == true]"></span> Filtros</h3>
-      <!--</div>-->
+      <table class="tabela tabela-bordered tabela-esticada">
+        <thead>
+          <tr>
+            <th>Código</th>
+            <th>Orçamento</th>
+            <th>Cliente</th>
+            <th>Responsável</th>
+            <th>Atualização</th>
+            <th>Último Parecer</th>
+            <th>Cadastro</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="a in followUp.atendimentos">
+            <td data-label="Código">{{a.codigo}}</td>
+            <td data-label="Código do orçamento">{{a.pedido.codigo}}</td>
+            <td data-label="Cliente">{{a.pedido.cliente.nome | truncate:35}}</td>
+            <td data-label="Responsável">{{a.historico[0].responsavel.usuario}}</td>
+            <td data-label="Data de Atualização">{{a.dataUpdate | date:'short'}}</td>
+            <td data-label="Data do último parecer">{{a.parecer[0].dataCadastro | date:'short'}}</td>
+            <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
+            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-pencil"></span></a></td>
+            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-plus-sign"></span></a></td>
+            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-time"></span></a></td>
+            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-folder-open"></span></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-      <div class="well condensar-rows" uib-collapse="!show_filtros">
+</div>
+
+<!--MODAL FILTROS-->
+<div class="modal meu-modal fade" id="modalFiltros" tabindex="-1" role="dialog" aria-labelledby="modalFiltros">
+  <div class="modal-dialog" role="document" style="width: 1000px">
+    <div class="modal-content">
+      <div class="header">
+        <div class="title"><span class="glyphicon glyphicon-pencil"></span> Tipo <span
+          class="glyphicon glyphicon-remove close" ng-click="configuracoes.cancelarModalTipoFollowUp()"></span></div>
+      </div>
+      <div class="body condensar-rows">
+
         <div class="col-md-2">
           <h4>Atendimento</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
-              <span class="input-group-btn">
-                <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-              </span>
+            <span class="input-group-btn">
+            <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
+          </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Orçamento</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
-              <span class="input-group-btn">
-                <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-              </span>
+            <span class="input-group-btn">
+            <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
+          </span>
           </div>
         </div>
         <div class="col-xs-12 col-md-4">
@@ -56,17 +98,17 @@
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
         </div>
@@ -75,17 +117,17 @@
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
         </div>
@@ -94,17 +136,17 @@
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
           <div class="col-md-6">
             <div class="input-group">
               <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
+              </span>
             </div>
           </div>
         </div>
@@ -120,43 +162,13 @@
           <h4>&nbsp;</h4>
           <button class="btn btn-default botao-esticado" ng-click=""><span class="glyphicon glyphicon-search"></span> Filtrar</button>
         </div>
+
+      </div>
+      <div class="footer">
+        <button type="button" class="btn btn-default" ng-click="configuracoes.cancelarModalTipoFollowUp()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
+        <button type="button" class="btn btn-default" ng-click="configuracoes.salvarTipoFollowUp()"><span class="glyphicon glyphicon-ok"></span> Limpar</button>
       </div>
     </div>
-
-    <div class="col-md-12">
-      <table class="tabela tabela-bordered tabela-esticada">
-        <thead>
-          <tr>
-            <th>Código</th>
-            <th>Orçamento</th>
-            <th>Cliente</th>
-            <th>Responsável</th>
-            <th>Atualização</th>
-            <th>Último Parecer</th>
-            <th>Cadastro</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="a in followUp.atendimentos">
-            <td data-label="Código">{{a.codigo}}</td>
-            <td data-label="Código do orçamento">{{a.pedido.codigo}}</td>
-            <td data-label="Cliente">{{a.pedido.cliente.nome}}</td>
-            <td data-label="Responsável">{{a.historico.responsavel.usuario}}</td>
-            <td data-label="Data de Atualização">{{a.dataUpdate | date:'short'}}</td>
-            <td data-label="Data do último parecer">{{a.dataUltimoParecer | date:'short'}}</td>
-            <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
-            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-pencil"></span></a></td>
-            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-plus-sign"></span></a></td>
-            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-time"></span></a></td>
-            <td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-folder-open"></span></a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
-
 </div>
+<!--FIM MODAL-->
