--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -2,30 +2,32 @@
   margin-top: 40px;
   margin-bottom: 40px;
 
-  .card, .card > div, .card .head {
-    padding: 4px;
+  .card .head {
+    padding: 6px;
+    margin: 0 -15px;
+    margin-bottom: 10px;
   }
 
-  .collapse.in {
-    display: inline-block;
+  ul[name='historico'] {
+    min-height: 250px;
   }
 }
 
-.campo-duplo {
-  > div {
-    padding: 0 4px;
-  }
-
-  > div:last-child {
-    padding-left: 4px !important;
-    padding-right: 0 !important;
-  }
-
-  > div:nth-child(2){
-    padding-left: 0 !important;
-    padding-right: 4px !important;
-  }
-}
+//.campo-duplo {
+//  > div {
+//    padding: 0 4px;
+//  }
+//
+//  > div:last-child {
+//    padding-left: 4px !important;
+//    padding-right: 0 !important;
+//  }
+//
+//  > div:nth-child(2){
+//    padding-left: 0 !important;
+//    padding-right: 4px !important;
+//  }
+//}
 
 //.follow-up.container {
 //  background-color: darksalmon !important;
